* Cleaned up duplicate code fragments
* Added CLI commands cons3rt project run off, on, snapshot, and restore to manage runs at the project level
* Expanded the methods for listing site users via a new method list_users which take more options like user state and creation dates,
and added the ability to set max_results, and set the default to 500, which should significant speed up this query

0.0.14
======

* Added cloudwatchutil.py module for handling AWS cloudwatch

0.0.13
======

* Added a CLI command and method to delete cloudspaces for a cloud, and added returns for release runs in a cloudspace, and deleting runs in a cloudspace
* Added a method to retrieve details of a test asset
* Fixed running team reports from the CLI while providing the --config arg
* Added methods for assigning and unassigning project roles
* Added helpful methods for quickly assigning roles for project managers, asset developers, and express users in a project
* Added support for setting PYCONS3RT_HOME environment variable to keep the config, logs, etc. in a desired location
* Added support for AWS CLI environment variables AWS_CONFIG_FILE and AWS_SHARED_CREDENTIALS_FILE when performing login_as_role and setting the credentials files
* Added methods for retrieving expires, active, inactive, and non-expired teams; and printing team manager emails
* Added the --expired and --unexpired for listing teams via CLI, and also incorporated the --active when listing teams in the CLI.  Added the state and expiration date to the team listing output.
* Added the --config arg for the asset CLI command to specify a config file
* Added methods for deleting subnets, deleting internet gateways, deleting VPCs, and deleting the default VPC
* Added methods for getting a list of cons3rt bucket source IPs, and adding IPs to the list
* Added methods for creating and managing reverse lookup zones in AWS Route53
* Added a module for integrating with the Azure metadata service

0.0.12
======
