@@ -1,0 +1,28 @@
+"""
+cons3rtenums.py
+
+A module for commonly used CONS3RT emails
+
+"""
+
+cons3rt_deployment_run_status = [
+    'CANCELED', 'COMPLETED', 'HOSTS_PROVISIONED', 'PROVISIONING_HOSTS', 'REDEPLOYING_HOSTS', 'RELEASE_REQUESTED',
+    'RELEASING', 'RESERVED', 'SCHEDULED', 'SUBMITTED', 'TESTED', 'TESTING', 'UNKNOWN'
+]
+
+
+cons3rt_deployment_run_status_active = [
+    'SUBMITTED', 'PROVISIONING_HOSTS', 'HOSTS_PROVISIONED', 'RESERVED', 'TESTING', 'TESTED'
+]
+
+
+cons3rt_fap_status = [
+    'AGENT_CHECK_IN_ERROR', 'AGENT_CHECK_IN_SUCCESS', 'AWAITING_AGENT_CHECK_IN', 'BUILDING_HOSTSET',
+    'BUILDING_HOSTSET_ERROR', 'BUILDING_SCENARIO', 'BUILDING_SCENARIO_ERROR', 'BUILDING_SOURCE',
+    'BUILDING_SOURCE_ERROR', 'BUILDING_SYSTEMS', 'BUILDING_SYSTEMS_ERROR', 'CANCELED', 'COMPLETE',
+    'FAP_SERVICE_COMMUNICATIONS_ERROR', 'HOSTSET_BUILT_POWERED_OFF', 'INVALID_REQUEST_ERROR', 'INVALID_STATE_ERROR',
+    'POWERED_ON', 'POWERING_ON', 'POWERING_ON_ERROR', 'REBOOTING', 'REBOOTING_ERROR', 'REDEPLOYING_HOSTS',
+    'REDEPLOYING_HOSTS_ERROR', 'RELEASE_REQUESTED', 'RELEASING', 'RELEASING_SCENARIO_ERROR', 'REQUESTED', 'RESERVED',
+    'SCENARIO_BUILT', 'SOURCE_BUILT', 'SYSTEMS_BUILT', 'UNKNOWN'
+]
+
