@@ -6,6 +6,8 @@
 * Added CLI commands cons3rt project run off, on, snapshot, and restore to manage runs at the project level
 * Expanded the methods for listing site users via a new method list_users which take more options like user state and creation dates,
 and added the ability to set max_results, and set the default to 500, which should significant speed up this query
+* Improved releasing all active runs from a cloudspace, will now monitor each DR to reach COMPLETED or CANCELLED status
+* Added a "RunWaiter" class for monitoring deployment runs reaching one of a list of desired states
 
 0.0.14
 ======
